# pisinger-knapsack-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  references.bib
.github/workflows/: ci.yml  release.yml
examples/: generate.sh
examples/data/: manifest.json  n1000_strongly.json  n1000_uncorrelated.json  n1000_weakly.json  n20_strongly.json  n20_uncorrelated.json  n20_weakly.json
src/pisinger_knapsack/: __init__.py  capacity.py  cli.py  constants.py  correlation.py  generator.py  helper.py  instance.py  manifest.py  serialization.py
tests/: test_capacity.py  test_cli.py  test_correlation_schemes.py  test_examples.py  test_instance.py  test_manifest.py  test_serialization.py
